--- a/style.css
+++ b/style.css
@@ -54,3 +54,18 @@ h1 {
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
+
+.container-fluid {
+    /* Adjust as needed */
+    max-width: 1440px;
+    margin: 40px auto;
+    position: relative;
+}
+
+.map {
+    height: 1144px;
+    width: 1076px;
+    background: url("./data/nishanthan/BaseMap.png") center center no-repeat;
+    position: relative;
+    left: 150px;
+}
